--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@madzadev/image-slider": "^1.0.8",
     "next": "12.1.0",
+    "next-images": "^1.8.4",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-router-dom": "^6.2.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.10.0",
