--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
